update gioi thieu v5

--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -176,7 +176,8 @@
             <i class="star-rating"></i>
           </span>
           <div class="section-subtitle">Về Chúng Tôi</div>
-          <div class="section-title" style="font-weight: 800;font-size: 33px;padding-top: 20px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM
+          <div class="section-title" style="font-weight: 800;font-size: 33px;padding-top: 20px;">CÔNG TY CỔ PHẦN DỊCH VỤ
+            BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM
           </div>
           <p>Công Ty Bảo Vệ Trung Nam xin gửi đến Quý Khách Hàng một lời chúc tốt đẹp nhất ! </p>
           <p>Thưa Quý khách hàng, Công ty chúng tôi hoạt động chủ yếu trong lĩnh vực cung cấp Dịch vụ Bảo Vệ –
@@ -377,7 +378,8 @@
             <i class="star-rating"></i>
           </span>
           <div class="section-subtitle">THÔNG TIN LIÊN HỆ</div>
-          <div class="section-title"  style="font-weight: 800;font-size: 28px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM</div>
+          <div class="section-title" style="font-weight: 800;font-size: 28px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN
+            NGHIỆP TRUNG NAM</div>
           <p><span style="font-weight: 800;">- Văn phòng tại:</span> Tầng 08, Tòa nhà Pearl Plaza, 561A Điện Biên Phủ,
             Phường 25, Quận Bình Thạnh, TP.HCM, Việt Nam.</p>
           <p><span style="font-weight: 800;">- Website:</span> <a
@@ -392,8 +394,8 @@
             </div>
           </div>
         </div>
-        <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img
-            src="./images/gioi-thieu/ve-chung-toi-1.jpg" alt="" class="mt-90 mb-30"> </div>
+        <div class="col col-md-6 animate-box" data-animate-effect="fadeInUp"> <img
+            src="./images/hinh-lien-he.jpg" alt="" class=" mb-30"> </div>
         <!-- <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/2.jpg" alt=""> -->
       </div>
     </div>
