update bang gia

--- a/lien-he.html
+++ b/lien-he.html
@@ -173,7 +173,8 @@
           <div style="padding-bottom: 20px;">Với phương châm mang đến 1 dịch vụ bảo vệ: <div
               style="font-weight: 800; color: black; font-size: 20px;">“An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”,</div>
             cùng với đội ngũ
-            nhân viên được tuyển chọn và đào tạo nghiệp vụ bài bản.</div>
+            nhân viên được tuyển chọn và đào tạo nghiệp vụ bài bản, đáp ứng mọi yêu cầu của khách hàng về các dịch vụ
+            bảo vệ.</div>
           <div class="reservations mb-30">
             <div class="icon"><span class="flaticon-call"></span></div>
             <div class="text">
@@ -194,38 +195,38 @@
             </div>
           </div>
         </div>
-        <div class="col-md-5 mb-30 offset-md-1">
-          <h3>Gửi liên hệ</h3>
-          <form method="post" class="contact__form" action="mail.php">
-            <!-- form message -->
-            <div class="row">
-              <div class="col-12">
-                <div class="alert alert-success contact__msg" style="display: none" role="alert"> Your
-                  message was sent successfully. </div>
+        <div class="col-md-5 mb-30 offset-md-1 lien-he">
+            <h3 style="text-align: center; font-weight: 800;">Gửi liên hệ</h3>
+            <form method="post" class="contact__form" action="mail.php">
+              <!-- form message -->
+              <div class="row">
+                <div class="col-12">
+                  <div class="alert alert-success contact__msg" style="display: none" role="alert"> Your
+                    message was sent successfully. </div>
+                </div>
               </div>
-            </div>
-            <!-- form elements -->
-            <div class="row">
-              <div class="col-md-6 form-group">
-                <input name="name" type="text" placeholder="Tên của bạn *" required>
+              <!-- form elements -->
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input name="name" type="text" placeholder="Tên của bạn *" required>
+                </div>
+                <div class="col-md-6 form-group">
+                  <input name="email" type="email" placeholder="Email của bạn *" required>
+                </div>
+                <div class="col-md-6 form-group">
+                  <input name="phone" type="text" placeholder="Số điện thoại của bạn *" required>
+                </div>
+                <div class="col-md-6 form-group">
+                  <input name="subject" type="text" placeholder="Tiêu đề *" required>
+                </div>
+                <div class="col-md-12 form-group">
+                  <textarea name="message" id="message" cols="30" rows="4" placeholder="Nội dung *" required></textarea>
+                </div>
+                <div class="col-md-12">
+                  <button type="submit" class="butn-dark2"><span>Gửi liên hệ</span></button>
+                </div>
               </div>
-              <div class="col-md-6 form-group">
-                <input name="email" type="email" placeholder="Email của bạn *" required>
-              </div>
-              <div class="col-md-6 form-group">
-                <input name="phone" type="text" placeholder="Số điện thoại của bạn *" required>
-              </div>
-              <div class="col-md-6 form-group">
-                <input name="subject" type="text" placeholder="Tiêu đề *" required>
-              </div>
-              <div class="col-md-12 form-group">
-                <textarea name="message" id="message" cols="30" rows="4" placeholder="Nội dung *" required></textarea>
-              </div>
-              <div class="col-md-12">
-                <button type="submit" class="butn-dark2"><span>Gửi liên hệ</span></button>
-              </div>
-            </div>
-          </form>
+            </form>
         </div>
       </div>
       <!-- Map Section -->
