--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -176,7 +176,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="square-flip">
-                        <div class="square bg-img" data-background="img/rooms/1.jpg">
+                        <div class="square bg-img" style="background-image: url(./images/tin-tuc/toa-nha-900\ x1200-pixel.jpg);">
                             <span class="category"><a href="noi-quy-bao-ve-toa-nha.html">Chi tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
                                 <div class="box-title">
@@ -200,7 +200,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="square-flip">
-                        <div class="square bg-img" data-background="img/rooms/2.jpg">
+                        <div class="square bg-img" style="background-image: url(./images/tin-tuc/cong-ty-900\ x1200-pixel.jpg);">
                             <span class="category"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
                                 <div class="box-title">
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="square-flip">
-                        <div class="square bg-img" data-background="img/rooms/3.jpg">
+                        <div class="square bg-img" style="background-image: url(./images/tin-tuc/binhduong-900\ x1200-pixel.jpg);">
                             <span class="category"><a href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
                                     tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
@@ -247,7 +247,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="square-flip">
-                        <div class="square bg-img" data-background="img/rooms/6.jpg">
+                        <div class="square bg-img" style="background-image: url(./images/tin-tuc/cong-ty-lua-dao-900\ x1200-pixel.jpg);">
                             <span class="category"><a href="dau-hieu-nhan-biet-cong-ty-bao-ve-lua-dao.html">Chi
                                     tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
@@ -274,7 +274,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="square-flip">
-                        <div class="square bg-img" data-background="img/rooms/8.jpg">
+                        <div class="square bg-img" style="background-image: url(./images/tin-tuc/truong\ hoc-900\ x1200-pixel.jpg);">
                             <span class="category"><a href="noi-quy-nha-xe-truong-hoc.html">Chi tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
                                 <div class="box-title">
@@ -295,7 +295,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="square-flip">
-                        <div class="square bg-img" data-background="img/rooms/9.jpg">
+                        <div class="square bg-img" style="background-image: url(./images/tin-tuc/sucotoanha-900\ x1200-pixel.jpg);">
                             <span class="category"><a href="quy-trinh-xu-ly-su-co-toa-nha.html">Chi tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
                                 <div class="box-title">
