--- a/lien-he.html
+++ b/lien-he.html
@@ -153,7 +153,7 @@
   </nav>
   <!-- Header Banner -->
   <div class="banner-header section-padding valign bg-img bg-fixed" data-overlay-dark="3"
-    data-background="img/slider/5.jpg">
+  style="background-image: url(./images/gioi-thieu/banner.jpg);">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-left caption mt-90">
