update img dich vu

--- a/bao-ve-phong-kham-benh-vien.html
+++ b/bao-ve-phong-kham-benh-vien.html
@@ -268,8 +268,8 @@
                                     <h5>Thuê dịch vụ bảo vệ phòng khám bệnh viện tại sao nên chọn Trung Nam ?
                                     </h5>
                                     <ul>
-                                        <li>- Giấy phép kinh doanh số: 0315865575</li>
-                                        <li>- Giấy phép đủ điều kiện an ninh trật tự số: 2936/GCN</li>
+                                        <li>- Giấy phép kinh doanh số: 0318273601</li>
+                                        <li>- Giấy phép đủ điều kiện an ninh trật tự </li>
                                         <li>- Chứng chỉ phòng cháy chữa cháy</li>
                                         <li>- Chứng chỉ nghiệp vụ</li>
                                         <li>- Chứng nhận sơ cứu thương</li>
