--- a/bao-ve-su-kien-le-hoi.html
+++ b/bao-ve-su-kien-le-hoi.html
@@ -153,7 +153,7 @@
       </nav>
     <!-- Header Banner -->
     <div class="banner-header section-padding valign bg-img bg-fixed" data-overlay-dark="4"
-        data-background="img/slider/7.jpg">
+        style="background-image: url(./images/gioi-thieu/banner.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-left caption mt-90">
@@ -355,21 +355,16 @@
                                                 TRUNG NAM</span>.</li>
                                         <li>- Tên viết tắt là: <span style="font-weight: 800; color: black;">TRUNG NAM
                                                 SECURITY SERVICE CO.,LTD.</span></li>
-                                        <li>- Giấy phép kinh doanh số: 0315865575.</li>
-                                        <li>- Giấy đủ điều kiện về an ninh, trật tự số: 2936/GCN.</li>
+                                        <li>- Giấy phép kinh doanh số: 0318273601.</li>
+                                        <li>- Giấy đủ điều kiện về an ninh, trật tự.</li>
+                                        <li>- Chứng chỉ nghiệp vụ, PCCC, sơ cứu thương và chứng nhận sử dụng công cụ hỗ
+                                          trợ bảo vệ.</li>
                                         <li>- Địa chỉ trụ sở chính: 369 Bình Lợi, Phường 13, Quận Bình Thạnh, Thành Phố
                                             Hồ Chí Minh, Việt Nam.</li>
                                         <li>- Hotline: 0916 90 95 97.</li>
                                     </ul>
 
-                                    <h6>Hồ sơ pháp lý công ty bảo vệ</h6>
-                                    <ul>
-                                        <li>- Giấy phép kinh doanh số: 0315865575 do Sở kế hoạch và đầu tư thành phố Hồ
-                                            Chí Minh.</li>
-                                        <li>- Giấy phép đủ điều kiện An Ninh trật tự số: 2936/GCN.</li>
-                                        <li>- Chứng chỉ nghiệp vụ, PCCC, sơ cứu thương và chứng nhận sử dụng công cụ hỗ
-                                            trợ bảo vệ.</li>
-                                    </ul>
+                                    
                                     <h6>Năng lực nghiệp vụ bảo vệ sự kiện </h6>
                                     <p>Năng lực nghiệp vụ bảo vệ sự kiện của bảo vệ Trung Nam là: giám sát trong
                                         quảng trường, kiểm soát đám đông, bảo vệ tài sản, bảo vệ người nổi tiếng và
