--- a/bao-ve-sieu-thi-va-trung-tam-thuong-mai.html
+++ b/bao-ve-sieu-thi-va-trung-tam-thuong-mai.html
@@ -153,7 +153,7 @@
       </nav>
     <!-- Header Banner -->
     <div class="banner-header section-padding valign bg-img bg-fixed" data-overlay-dark="4"
-        data-background="img/slider/7.jpg">
+        style="background-image: url(./images/gioi-thieu/banner.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-left caption mt-90">
