--- a/gia-thue-bao-ve.html
+++ b/gia-thue-bao-ve.html
@@ -419,8 +419,8 @@
                   tín, có tinh thần trách nhiệm và cầu thị cao.</p>
                 <h6>Hồ sơ pháp lý công ty bảo vệ Trung Nam</h6>
                 <ul>
-                  <li>- Giấy phép kinh doanh số: 0315865575</li>
-                  <li>- Giấy phép đủ điều kiện an ninh trật tự số: 2936/GCN</li>
+                  <li>- Giấy phép kinh doanh số: 0318273601</li>
+                  <li>- Giấy phép đủ điều kiện an ninh trật tự </li>
                   <li>- Chứng chỉ phòng cháy chữa cháy</li>
                   <li>- Chứng chỉ nghiệp vụ</li>
                   <li>- Chứng nhận sơ cứu thương</li>
