--- a/quy-trinh-xu-ly-su-co-toa-nha.html
+++ b/quy-trinh-xu-ly-su-co-toa-nha.html
@@ -153,7 +153,7 @@
       </nav>
     <!-- Header Banner -->
     <div class="banner-header section-padding valign bg-img bg-fixed" data-overlay-dark="4"
-        data-background="img/slider/7.jpg">
+        style="background-image: url(./images/gioi-thieu/banner.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-left caption mt-90">
@@ -297,38 +297,41 @@
 
         </div>
         <div style="background: #f8f5f0;width: 100%;">
-            <div class="about section-padding">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
-                            <span>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                            </span>
-                            <div class="section-subtitle">THÔNG TIN LIÊN HỆ TƯ VẤN BÁO GIÁ DỊCH VỤ BẢO VỆ</div>
-                            <div class="section-title" style="font-weight: 800;">CÔNG TY BẢO VỆ TRUNG NAM</div>
-                            <p><span style="font-weight: 800;">- Trụ Sở Chính:</span> 27/18/7 Nguyễn Bỉnh Khiêm, P1 ,
-                                Quận Gò Vấp, Thành phố Hồ Chí Minh</p>
-                            <p><span style="font-weight: 800;">- Website:</span> <a
-                                    href="https://baovetrungnam.info/">https://baovetrungnam.info/</a></p>
-                            <!-- reservation -->
-                            <div class="reservations">
-                                <div class="icon"><span class="flaticon-call"></span></div>
-                                <div class="text">
-                                    <p>Liên hệ ngay</p> <a href="tel:0934193113">0934 193 113</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/8.jpg"
-                                alt="" class="mt-90 mb-30"> </div>
-                        <!-- <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/2.jpg" alt=""> -->
+          <section class="about section-padding">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
+                  <span>
+                    <i class="star-rating"></i>
+                    <i class="star-rating"></i>
+                    <i class="star-rating"></i>
+                    <i class="star-rating"></i>
+                    <i class="star-rating"></i>
+                  </span>
+                  <div class="section-subtitle">THÔNG TIN LIÊN HỆ</div>
+                  <div class="section-title" style="font-weight: 800;font-size: 28px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN
+                    NGHIỆP TRUNG NAM</div>
+                  <p><span style="font-weight: 800;">- Văn phòng tại:</span> Tầng 08, Tòa nhà Pearl Plaza, 561A Điện Biên
+                    Phủ,
+                    Phường 25, Quận Bình Thạnh, TP.HCM, Việt Nam.</p>
+                  <p><span style="font-weight: 800;">- Website:</span> <a
+                      href="https://baovetrungnam.vn">https://baovetrungnam.vn</a></p>
+                  <p><span style="font-weight: 800;">- Email:</span> <a
+                      href="mailto:baovetrungnam.vn@gmail.com">baovetrungnam.vn@gmail.com</a></p>
+                  <!-- reservation -->
+                  <div class="reservations">
+                    <div class="icon"><span class="flaticon-call"></span></div>
+                    <div class="text">
+                      <p>Liên hệ ngay</p> <a href="tel:0934193113">0934 193 113</a>
                     </div>
+                  </div>
                 </div>
-
+                <div class="col col-md-6 animate-box" data-animate-effect="fadeInUp"> <img src="./images/hinh-lien-he.jpg"
+                    alt="" class=" mb-30"> </div>
+                <!-- <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/2.jpg" alt=""> -->
+              </div>
             </div>
+          </section>
         </div>
     </section>
     <!-- Footer -->
